@@ -292,7 +292,7 @@ Report bugs to <bug-autoconf@gnu.org>."
 ac_cs_version="\
 udis86 config.status 1.4
 configured by ./configure, generated by GNU Autoconf 2.57,
-  with options \" 'CFLAGS='\"
+  with options \"\"
 
 Copyright 1992, 1993, 1994, 1995, 1996, 1998, 1999, 2000, 2001
 Free Software Foundation, Inc.
@@ -372,8 +372,8 @@ if $ac_cs_silent; then
 fi
 
 if $ac_cs_recheck; then
-  echo "running /bin/sh ./configure "  'CFLAGS=' $ac_configure_extra_args " --no-create --no-recursion" >&6
-  exec /bin/sh ./configure  'CFLAGS=' $ac_configure_extra_args --no-create --no-recursion
+  echo "running /bin/sh ./configure "  $ac_configure_extra_args " --no-create --no-recursion" >&6
+  exec /bin/sh ./configure  $ac_configure_extra_args --no-create --no-recursion
 fi
 
 for ac_config_target in $ac_config_targets
@@ -464,7 +464,7 @@ s,@ECHO_N@,-n,;t t
 s,@ECHO_T@,,;t t
 s,@LIBS@,,;t t
 s,@CC@,gcc,;t t
-s,@CFLAGS@,,;t t
+s,@CFLAGS@,-g -O2,;t t
 s,@LDFLAGS@,,;t t
 s,@CPPFLAGS@,,;t t
 s,@ac_ct_CC@,gcc,;t t
