@@ -590,6 +590,16 @@ const char* ud_mnemonics[] =
   "addsubps",
   "lddqu",
   "int1",
+  "vmcall",
+  "vmlaunch",
+  "vmresume",
+  "vmxoff",
+  "monitor",
+  "mwait",
+  "vmptrld",
+  "vmptrst",
+  "vmclear",
+  "vmxon",
   "none",
   "I3vil",
 };
