@@ -67,6 +67,22 @@ ud_set_mode(struct ud* u, uint8_t m)
 }
 
 /* =============================================================================
+ * ud_set_vendor() - Set vendor.
+ * =============================================================================
+ */
+extern void 
+ud_set_vendor(struct ud* u, unsigned v)
+{
+  switch(v) {
+	case UD_VENDOR_INTEL:
+		u->vendor = v;
+		break;
+	default:
+		u->vendor = UD_VENDOR_AMD;
+  }
+}
+
+/* =============================================================================
  * ud_set_pc() - Sets code origin. 
  * =============================================================================
  */
