@@ -1,5 +1,7 @@
  * [Dec/18/06] Fixed: Printf warnings.
-	       Fixed: set_input_buffered t set_input_buffered.
+	       Fixed: set_input_buffered to set_input_buffer in documentation.
+	       Added support for INTEL VMX instructions.
+	       API addition: ud_set_vendor(): UD_VENDOR_{INTEL, AMD}
  * [Oct/27/06] 0xF1 is now int1.
 	       Fixed: cast prefix for Group1_op80/82/C0/D0 instructions.
 	       Fixed: lmsw
